<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <include
        layout="@layout/appbar"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:hint="Password "/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password??"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:textColor="@color/red"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:text="@string/not_yet_registered"
        android:layout_marginStart="85dp" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/registerNow"
      android:text="@string/register_now"/>



</LinearLayout>