<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ProfileSaveActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="60dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="121dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/profile_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="320dp"
            android:layout_height="350dp"
            android:background="@drawable/white_btn"
            android:elevation="3dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullName"
                    android:inputType="text"
                    android:textSize="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name: "/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="phone"
                    android:id="@+id/mobileNo"
                    android:textSize="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/email"
                    android:textSize="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:clickable="false"
                    android:focusable="false"
                    android:cursorVisible="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="Are you sure you want to save this ??"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/saverBtn"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:text="Save"

                android:textColorHighlight="#FF9800"
                android:textColorLink="#FF9800"
                android:textCursorDrawable="@color/design_default_color_primary"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/logout"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/linearLayout"

            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/green"
        app:itemIconTint="@drawable/selected_items"
        app:itemTextColor="@drawable/selected_items"
        app:menu="@menu/menu" />

    <include
        android:id="@+id/include"
        layout="@layout/appbar" />


</RelativeLayout>